add location and birthdate to user registration form; add organization member search endpoint